public/stylesheets/main.css
/* ... */
button::-moz-focus-inner, input::-moz-focus-inner {
  border: 0;
  padding: 0; }

textarea {
  overflow: auto;
  vertical-align: top; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

@media print {
  * {
    text-shadow: none !important;
    color: #000 !important;
    background: transparent !important;
    box-shadow: none !important; }
  a, a:visited {
    text-decoration: underline; }
  a[href]:after {
    content: " (" attr(href) ")"; }
  abbr[title]:after {
    content: " (" attr(title) ")"; }
  a[href^="javascript:"]:after, a[href^="#"]:after {
    content: ""; }
  pre, blockquote {
    border: 1px solid #999;
    page-break-inside: avoid; }
  thead {
    display: table-header-group; }
  tr, img {
    page-break-inside: avoid; }
  img {
    max-width: 100% !important; }
  @page {
    margin: 2cm .5cm; }

  p, h2, h3 {
    orphans: 3;
    widows: 3; }
  h2, h3 {
    page-break-after: avoid; }
  select {
    background: #fff !important; }
  .navbar {
    display: none; }
  .table td, .table th {
    background-color: #fff !important; }
  .btn > .caret, .dropup > .btn > .caret {
    border-top-color: #000 !important; }
  .label {
    border: 1px solid #000; }
  .table {
    border-collapse: collapse !important; }
  .table-bordered th, .table-bordered td {
    border: 1px solid #ddd !important; } }

*, *:before, *:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }

html {
  font-size: 62.5%;
  -webkit-tap-highlight-color: transparent; }

body {
  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.6;
  color: black;
  background-color: #eeeeee; }

input, button, select, textarea {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit; }

a {
  color: #34495e;
  text-decoration: none; }
  a:hover, a:focus {
    color: #19232d;
    text-decoration: underline; }
  a:focus {
    outline: thin dotted #333;
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px; }

img {
  vertical-align: middle; }

.img-responsive {
  display: block;
  max-width: 100%;
  height: auto; }

.img-rounded {
  border-radius: 6px; }

.img-thumbnail, .thumbnail {
  padding: 4px;
  line-height: 1.6;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 4px;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  display: inline-block;
  max-width: 100%;
  height: auto; }

.img-circle {
  border-radius: 50%; }

hr {
  margin-top: 25px;
  margin-bottom: 25px;
  border: 0;
  border-top: 1px solid #eeeeee; }

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0; }

p {
  margin: 0 0 12.5px; }

.lead {
  margin-bottom: 25px;
  font-size: 18px;
  font-weight: 200;
  line-height: 1.4; }
  @media (min-width: 768px) {
    .lead {
      font-size: 24px; } }

small, .small {
  font-size: 85%; }

cite {
  font-style: normal; }

.text-muted {
  color: #999999; }

.text-primary {
  color: #34495e; }
  .text-primary:hover {
    color: #222f3d; }

.text-warning {
  color: #c09853; }
  .text-warning:hover {
    color: #a47e3c; }

.text-danger {
  color: #b94a48; }
  .text-danger:hover {
    color: #953b39; }

.text-success {
  color: #468847; }
  .text-success:hover {
    color: #356635; }

.text-info {
  color: #3a87ad; }
  .text-info:hover {
    color: #2d6987; }

.text-left {
  text-align: left; }

.text-right {
  text-align: right; }

.text-center {
  text-align: center; }

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 400;
  line-height: 1.1;
  color: inherit; }
  h1 small, h1 .small, h2 small, h2 .small, h3 small, h3 .small, h4 small, h4 .small, h5 small, h5 .small, h6 small, h6 .small, .h1 small, .h1 .small, .h2 small, .h2 .small, .h3 small, .h3 .small, .h4 small, .h4 .small, .h5 small, .h5 .small, .h6 small, .h6 .small {
    font-weight: normal;
    line-height: 1;
    color: #999999; }

h1, h2, h3 {
  margin-top: 25px;
  margin-bottom: 12.5px; }
  h1 small, h1 .small, h2 small, h2 .small, h3 small, h3 .small {
    font-size: 65%; }

h4, h5, h6 {
  margin-top: 12.5px;
  margin-bottom: 12.5px; }
  h4 small, h4 .small, h5 small, h5 .small, h6 small, h6 .small {
    font-size: 75%; }

h1, .h1 {
  font-size: 36px; }

h2, .h2 {
  font-size: 30px; }

h3, .h3 {
  font-size: 24px; }

h4, .h4 {
  font-size: 18px; }

h5, .h5 {
  font-size: 14px; }

h6, .h6 {
  font-size: 12px; }

.page-header {
  padding-bottom: 11.5px;
  margin: 50px 0 25px;
  border-bottom: 1px solid #eeeeee; }

ul, ol {
  margin-top: 0;
  margin-bottom: 12.5px; }
  ul ul, ul ol, ol ul, ol ol {
    margin-bottom: 0; }

.list-unstyled, .list-inline {
  padding-left: 0;
  list-style: none; }

.list-inline > li {
  display: inline-block;
  padding-left: 5px;
  padding-right: 5px; }
  .list-inline > li:first-child {
    padding-left: 0; }

dl {
  margin-bottom: 25px; }

dt, dd {
  line-height: 1.6; }

dt {
  font-weight: bold; }

dd {
  margin-left: 0; }

@media (min-width: 862px) {
  .dl-horizontal dt {
    float: left;
    width: 160px;
    clear: left;
    text-align: right;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap; }
  .dl-horizontal dd {
    margin-left: 180px; }
    .dl-horizontal dd:before, .dl-horizontal dd:after {
      content: " ";
      /* 1 */
      display: table;
      /* 2 */ }
    .dl-horizontal dd:after {
      clear: both; } }

abbr[title], abbr[data-original-title] {
  cursor: help;
  border-bottom: 1px dotted #999999; }

abbr.initialism {
  font-size: 90%;
  text-transform: uppercase; }

blockquote {
  padding: 12.5px 25px;
  margin: 0 0 25px;
  border-left: 5px solid #eeeeee; }
  blockquote p {
    font-size: 20px;
    font-weight: 300;
    line-height: 1.25; }
  blockquote p:last-child {
    margin-bottom: 0; }
/* ... */

